# 433-Beatbox

./: CMakeLists.txt
app/: CMakeLists.txt
app/include/: drumBeat.h  network.h  zenCapeControls.h
app/src/: drumBeat.c  main.c  network.c  wave_player.c  zenCapeControls.c
beatbox-wav-files/: _readme_and_license.txt
hal/include/hal/: accelerometer.h  audioMixer.h  joystick.h  periodTimer.h  timing.h
hal/src/: accelerometer.c  audioMixer.c  joystick.c  periodTimer.c  timing.c
nodeServer/: CMakeLists.txt  Makefile  package-lock.json  package.json  server.js
nodeServer/lib/: beat_box_server.js  udp_server.js
nodeServer/public/: index.html
nodeServer/public/javascripts/: beat_box_ui.js  udp_ui.js
nodeServer/public/stylesheets/: style.css
